hphp/hack/test/typecheck/xhp_modifier/xhp_modifier_not_on_interface.php.exp
File "xhp_modifier_not_on_interface.php", line 4, characters 1-19:
Interfaces are not valid xhp classes. (Parsing[1002])
