hphp/hack/test/typecheck/xhp_modifier/xhp_modifier_not_on_interface.php
<?hh // strict

// XHP keyword is not allowed for interfaces
xhp interface Foo {}
